<resources>
    <string name="app_name">academiatech</string>
    <string name="txt_acess_account">Acesse sua conta</string>
    <string name="txt_personal_button">Personal</string>
    <string name="txt_forgot_password">Esqueceu a senha? Clique aqui</string>
    <string name="txt_client_button">Cliente</string>
    <string name="txt_email">Digite seu email</string>
    <string name="txt_user">Usuário</string>
    <string name="txt_pwd">Digite sua senha</string>
    <string name="txt_enter">Entrar</string>
    <string name="txt_academia_tech">Academia Tech</string>
    <string name="txt_name">Nome:</string>
    <string name="txt_email_register">E-mail:</string>
    <string name="txt_gender">Genêro:</string>
    <string name="txt_masc">Masculino</string>
    <string name="txt_fem">Feminino</string>
    <string name="txt_user1">Usuário:</string>
    <string name="txt_pwd_register">Senha:</string>
    <string name="txt_confirm_pwd">Confirmar</string>
    <string name="txt_save">Salvar</string>
    <string name="txt_exit">Sair</string>
    <string name="txt_birthdate">Data de nascimento:</string>
    <string name="txt_cpf">CPF:</string>
    <string name="txt_confirm_register">Confirmar:</string>
    <string name="txt_repeat">Repita</string>
    <string name="txt_a_pwd">a senha:</string>
    <string name="txt_date">Data</string>
    <string name="txt_birth">de nascimento:</string>
    <string name="txt_meuperfil">Meu Perfil</string>
    <string name="txt_acesseperfil">Acesse seu perfil</string>
    <string name="txt_title_view">Menu</string>
    <string name="txt_fct">FCT</string>
    <string name="txt_perfil">Perfil</string>
    <string name="txt_training">Treinos</string>
    <string name="txt_local">Locais</string>
    <string name="txt_data">Meus Dados</string>
    <string name="txt_calc_fct">Calculadora de FCT</string>
    <string name="txt_person_data">Acesse seus Dados Pessoais</string>
    <string name="txt_explain_fct">Calcule a frequência cardíaca de treinamento do seu aluno</string>
    <string name="txt_prescription_explain">Elabore as rotinas de treinamento</string>
    <string name="txt_prescription_principal">Prescrições de Treinos</string>
    <string name="txt_prescription">Prescrições</string>
    <string name="txt_search_client">Pesquisar por Cliente:</string>
    <string name="txt_select_client">Selecione o Cliente</string>
    <string name="txt_prescription_begin">Data de início da prescrição</string>
    <string name="txt_df_training">Defina os treinos:</string>
    <string name="nbr_1">1</string>
    <string name="nbr_2">2</string>
    <string name="nbr_3">3</string>
    <string name="nbr_4">4</string>
    <string name="nbr_5">5</string>
    <string name="nbr_6">6</string>
    <string name="nbr_7">7</string>
    <string name="txt_total_prescription">Total de  treinos da prescrição:</string>
    <string name="txt_total_training_concluded">Tota de treinos realizados:</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_alter">Editar Perfil</string>
    <string name="txt_fct_selec">Selecione a intensidade do treino</string>
    <string name="txt_intensity">Intensidade do treino</string>
    <string name="txt_freq1">1ª Freq.</string>
    <string name="txt_freq2">2ª Freq.</string>
    <string name="txt_freq3">3ª Freq.</string>
    <string name="txt_fct_rest">Média FCT Repouso:</string>
    <string name="txt_fctMax">Frequência cardíaca max. de treino:</string>
    <string name="txt_fctmin">Frequência cardíaca mín. de treino:</string>
    <string name="txt_registrer_exercise">Cadastrar novo exercício</string>
    <string name="txt_exercise">Exercício</string>
    <string name="txt_machine_number">N° apr.</string>
    <string name="txt_muscle_group">Grupo Muscular</string>
    <string name="txt_video_uri">Link do vídeo</string>
    <string name="txt_series">Séries</string>
    <string name="txt_quantity">Quantidade</string>
    <string name="txt_rest">Intervalo</string>
    <string name="txt_weight">Carga</string>
    <string name="txt_note">Observação</string>
    <string name="txt_clients">Clientes</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_id">Nr. Matrícula</string>
    <string name="txt_nickname">Usuário</string>
    <string name="txt_delete">Deletar</string>
    <string name="txt_nasc">Nascimento</string>
    <string name="txt_exercise_list">Lista de exercícios</string>
    <string name="txt_idade">Idade</string>
    <string name="txt_min">Min</string>
    <string name="txt_max">Max</string>
    <string name="txt_media_button">Media</string>
</resources>