<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_acad_tech2"
    android:padding="0dp"
    tools:context=".MainActivityPrescription">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fct_intesity"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        app:boxStrokeColor="@color/acadetech"
        app:cursorColor="@color/acadetech"
        app:hintTextColor="@color/acadetech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/baseline_local_fire_department_24">

        <AutoCompleteTextView
            android:id="@+id/act_exercise_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:hint="@string/txt_intensity"
            android:inputType="text"
            android:padding="20dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/acadetech"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_calc_fct"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_fct_rest"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextMedia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextMedia" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="29dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_fctMax"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextFct2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextFct2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/txt_fctmin"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextFct1"
        app:layout_constraintEnd_toStartOf="@+id/editTextFct1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextfreq1"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/txt_freq1"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextfreq2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextfreq2"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="78dp"
        android:ems="10"
        android:hint="@string/txt_freq2"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextMedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_fct_intesity" />

    <EditText
        android:id="@+id/editTextfreq3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/txt_freq3"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextfreq2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonMedia" />

    <Button
        android:id="@+id/buttonfct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/white"
        android:onClick="fct1"
        android:text="@string/txt_min"
        android:textColor="@color/acadetech"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonfct2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/white"
        android:onClick="fct2"
        android:text="@string/txt_max"
        android:textColor="@color/acadetech"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonfct1" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/white"
        android:onClick="openActivityPrincipal"
        android:text="@string/txt_exit"
        android:textColor="@color/acadetech"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextIdade"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:layout_marginTop="174dp"
        android:layout_marginBottom="173dp"
        android:ems="10"
        android:hint="@string/txt_idade"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextMedia"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginTop="199dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="199dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonfct2"
        app:layout_constraintEnd_toStartOf="@+id/buttonMedia"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/til_fct_intesity" />

    <EditText
        android:id="@+id/editTextFct1"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/buttonMedia" />

    <EditText
        android:id="@+id/editTextFct2"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/editTextFct1" />

    <Button
        android:id="@+id/buttonMedia"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/white"
        android:onClick="media"
        android:text="@string/txt_media_button"
        android:textColor="@color/acadetech"
        app:cornerRadius="5dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextMedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextMedia" />


</androidx.constraintlayout.widget.ConstraintLayout>