<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundmain"
    tools:context=".MainActivityPrincipaAdmin">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar3"
        android:layout_width="409dp"
        android:layout_height="44dp"
        android:background="@color/acadetech"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/txt_academia_tech"
        app:titleCentered="true"
        app:titleTextColor="@color/design_default_color_background"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/imageperfil" />

                <LinearLayout
                    android:layout_width="278dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@android:style/TextAppearance.Holo.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/txt_meuperfil" />

                    <TextView
                        style="@android:style/TextAppearance.Holo.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/txt_acesseperfil" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>



</LinearLayout>
