<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityPrincipal"
    android:background="@color/backgroundmain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/arrowback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/arrowback" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search48px"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_academia_tech"
            android:textSize="20sp"
            android:textColor="@color/acadetech"
            android:fontFamily="@font/roboto"
            android:padding="10dp"
            android:textAllCaps="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/design_default_color_background">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_acesseperfil"
                android:textColor="@color/acadetech"
                android:textSize="20sp"
                android:fontFamily="@font/roboto"
                android:padding="25dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_perfil"
                android:textColor="@color/acadetech"
                android:background="#00000000"
                android:padding="20dp"
                android:layout_alignParentBottom="true"/>

            
        </RelativeLayout>
        
    </LinearLayout>

</ScrollView>